package com.drinkster.dto;

public record GameStartMessage(String message) {
}
