package com.drinkster.dto;

public record StartRequest(Long roomId) {
}
